WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294859
WCP sometimes crashes under WebPage::handleDoubleTapForDoubleClickAtPoint unwrapping an optional transaction ID
https://bugs.webkit.org/show_bug.cgi?id=294859
Summary
WCP sometimes crashes under WebPage::handleDoubleTapForDoubleClickAtPoint unw...
Abrar Rahman Protyasha
Reported
2025-06-23 12:14:15 PDT
rdar://153030729
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-06-23 12:21:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47076
EWS
Comment 2
2025-06-23 14:42:09 PDT
Committed
296532@main
(7f5bb4130b0f): <
https://commits.webkit.org/296532@main
> Reviewed commits have been landed. Closing PR #47076 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug