WCP sometimes crashes under WebPage::handleDoubleTapForDoubleClickAtPoint unwrapping an optional transaction ID https://bugs.webkit.org/show_bug.cgi?id=294859 rdar://153030729

Reviewed by Aditya Keerthi.

We sometimes see crashes as we unwrap the optional transaction ID
returned by WebFrame::firstLayerTreeTransactionIDAfterDidCommitLoad().
It's OK for us to not honor click/tap IPC messages in case there is no
first transaction ID, and is certainly better than a runtime crash, so
we harden the web content process against said crashes in this patch.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::attemptSyntheticClick):
(WebKit::WebPage::handleDoubleTapForDoubleClickAtPoint):

Canonical link: https://commits.webkit.org/296532@main